fix table header alignment

--- a/src/sass/overrides.sass
+++ b/src/sass/overrides.sass
@@ -108,3 +108,6 @@ input[type=number]
       height: inherit
   button
     top: -30px
+
+.v-data-table th
+  vertical-align: top
